Prevent setting checkboxes from shrinking
This CL fixes a small issue introduced by the SettingCheckbox
component. When the label text gets too long, the checkbox <input>
will shrink in size. This CL adds a min-width/min-height to the input
so the checkbox size stays consistent regardless of label text length.

R=alexrudenko@chromium.org

Fixed: 1294181
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3439919
Commit-Queue: Simon Zünd <szuend@chromium.org>
Auto-Submit: Simon Zünd <szuend@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/components/settings/settingCheckbox.css
+++ b/front_end/ui/components/settings/settingCheckbox.css
@@ -12,6 +12,8 @@
 input {
   height: 12px;
   width: 12px;
+  min-height: 12px;
+  min-width: 12px;
 }
 
 label {
